--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=task
+
+# H2 Database Configuration for an In-Memory Database
+spring.datasource.url=jdbc:h2:mem:resolvedb;
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
