Fixes: Enable spring flyway, remove flyway config file, remove redundant schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=task
 
+spring.flyway.enabled=true
+
 # H2 Database Configuration for an In-Memory Database
 spring.datasource.url=jdbc:h2:mem:resolvedb;
 spring.datasource.driverClassName=org.h2.Driver
